Fixes spacing on top of documents

--- a/styles/_custom.scss
+++ b/styles/_custom.scss
@@ -109,6 +109,11 @@ p:empty {
   .g-main-content,
   .playlist-navigation {
     border-width: 1px;
+    padding-top: 1.7rem;
+
+    > *:first-child {
+      margin-top: 0;
+    }
 
     h1, h2, h3, h4, h5, h6 {
       font-family: $font-subheading;
